[gd_scene load_steps=2 format=3 uid="uid://p5ben70jrljk"]

[ext_resource type="Script" path="res://script/UI/spells/spell_editor.gd" id="1_vhhr7"]

[node name="SpellEditor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vhhr7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="GraphEdit" type="GraphEdit" parent="."]
layout_mode = 2
size_flags_vertical = 3
right_disconnects = true

[connection signal="connection_request" from="GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="delete_nodes_request" from="GraphEdit" to="." method="_on_graph_edit_delete_nodes_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
